--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.error.include-stacktrace=NEVER
+
 spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca
 spring.datasource.username=root
 spring.datasource.password=1234568
